syntax = "proto3";

package aggregator;

option go_package = "github.com/rhine-team/RHINE-Prototype/offlineAuth2/components/aggregator";

// Service offered by the aggregator
service AggService {
  rpc RetrieveDSALog (RetrieveDSALogRequest) returns (RetrieveDSALogResponse) {}

  rpc SubmitNDS (SubmitNDSRequest) returns (SubmitNDSResponse) {}
}

message Lwit {
	repeated string DesignatedLogs = 1;
	string Log = 2;
	bytes NdsHash = 3;
	bytes Sig = 4;
}

message Acfm {
	string AggIdent = 1;
	bytes NdsHash = 2;
	bytes DSum = 3;
}

message RetrieveDSALogRequest {
	bytes DSARequest = 1;
}

message RetrieveDSALogResponse {
	bytes DSAPayload = 1;
}


message SubmitNDSRequest {
	bytes Nds = 1;
	repeated Lwit Lwits = 2;
	bytes Rid = 3;
}

message SubmitNDSResponse {
	Acfm Acfmg = 1;
	bytes Rid = 2;
}

